--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
   float: left;
   width: 33%;
 }
+
+h1{
+  text-align: center;
+}
+p{
+  text-align: center;
+}
+section{
+  text-align: center;
+}
