made the page have some css. woo.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,36 @@
+*{
+  box-sizing: border-box;
+}
 #img1, #img2, #img3{
   float: left;
   width: 33%;
+  margin-top: 6em;
+}
+img:hover{
+  border-style: solid;
+  border-color: rgb(159, 104, 32);
+  border-width: 2px;
+  cursor: pointer;
+}
+body{
+  background-color: rgb(177, 142, 89);
 }
 
 h1{
   text-align: center;
+  font-family: 'Cinzel', serif;
+  font-size: 2.6em;
+  background-color: rgb(159, 104, 32);
+  margin: 0;
+  padding: 0.6em;
 }
 p{
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 1.4em;
   text-align: center;
+  background-color: rgb(159, 104, 32);
+  margin: 0;
+  padding: 0.6em;
 }
 section{
   text-align: center;
