--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
 h1{
   text-align: center;
   font-family: 'Cinzel', serif;
-  font-size: 2.6em;
+  font-size: 3.5em;
+  color: rgb(255,146,25);
   background-color: rgb(159, 104, 32);
   margin: 0;
   padding: 0.6em;
