--- a/style.css
+++ b/style.css
@@ -10,34 +10,37 @@
   clear: both;
 }
 img{
-  transition-property: border-radius, background-color;
+  transition-property: border-radius;
   transition-duration: 0s;
+  opacity: 0.6;
 }
 img:hover{
   border-style: solid;
-  border-color: rgb(159, 104, 32);
+  border-color: darkgrey;
   border-width: 2px;
   cursor: pointer;
   border-radius: 2em;
+  opacity: 1;
 }
 body{
-  background-color: rgb(177, 142, 89);
+  background-color: lightgrey;
 }
 
 h1{
   text-align: center;
   font-family: 'Cinzel', serif;
   font-size: 3.5em;
-  color: rgb(255,146,25);
-  background-color: rgb(159, 104, 32);
+  color: grey;
+  background-color: lightblue;
   margin: 0;
   padding: 0.6em;
 }
 p{
   font-family: 'PT Sans Narrow', sans-serif;
   font-size: 1.4em;
+  color: grey;
   text-align: center;
-  background-color: rgb(159, 104, 32);
+  background-color: lightblue;
   margin: 0;
   padding: 0.6em;
 }
